#
# openSUSE Build Service 2.8.3
#

Updaters from OBS 2.8.0 release can just upgrade the packages
and restart all services. Updaters from former releases should
read the README.UPDATERS file.

Feature backports:
==================

* [webui] All global roles are now shown on the admin user edit page and can be added / removed
  from user accounts
* [webui] LDAP Authentication is now officially supported

Changes:
========

* None

Bugfixes:
=========

* [webui] Admins that edited their accounts via the user/show page lost their admin role
* [backend] fix for new linux version format in bs_worker
