@@ -22,5 +22,6 @@ Bugfixes:
 =========
 
 * [webui] Admins that edited their accounts via the user/show page lost their admin role
+* [api] fix config change of some /configuration values
 * [backend] fix for new linux version format in bs_worker
 
